Resolved defect #698993 - properly aligned "Save in address book" when logged in

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
@@ -1984,6 +1984,9 @@ p.required,
     .product-options ul.options-list .no-display + label:hover {
       background-color: transparent; }
 
+#shipping-new-address-form li.control label {
+  margin-left: 20px; }
+
 .product-options ul.options-list label,
 .col2-set .form-list .control label {
   min-width: inherit;
