--- a/webroot/skin/frontend/blueacorn/mis/scss/core/_form.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/core/_form.scss
@@ -368,6 +368,8 @@ p.required,
     }
 }
 
+#shipping-new-address-form li.control label { margin-left: 20px; }
+
 .product-options ul.options-list label,
 .col2-set .form-list .control label {
     min-width: inherit;
